--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.SongList {
+  background: #efefef;
+}
+
+.SongList .item {
+  margin: 10px;
+}
+
+.SongList .item a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #333;
+}
+
+.SongDetail {
+  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  overflow: scroll;
+  padding: 10px;
+  padding-bottom: 30px;
+}
+
+.SongDetail p {
+  white-space: nowrap;
+  display: inline-block;
+  padding-right: 20px;
 }
