Some tailwind css bs
* Scroll on phone is all jacked up.  Should use a list component.
* Should have placeholder when no stars / no songs matched
* Scrolling on song detail view???

--- a/src/index.css
+++ b/src/index.css
@@ -1,76 +1,4 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.search-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 50px;
-  z-index: 1;
-  background: crimson;
-  padding: 10px 5px;
-}
-
-.search-bar input {
-  padding: 10px;
-  background: white;
-  border-radius: 0;
-  border: none;
-}
-
-.search-bar button {
-  background: white;
-  border: none;
-  padding: 10px 10px;
-  float: right;
-}
-
-.SongList {
-  margin-top: 50px;
-}
-
-.SongList .item {
-  border-bottom: 1px solid #ccc;
-  padding: 10px;
-}
-
-.SongList .item a {
-  text-decoration: none;
-  font-weight: bold;
+.content p {
   color: #333;
-}
-
-.SongDetail {
-  background: white;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  overflow: scroll;
-  padding: 10px;
-  padding-bottom: 30px;
-}
-
-.SongDetail p {
-  white-space: nowrap;
-  display: inline-block;
-  padding-right: 20px;
+  margin-bottom: 20px;
 }
